[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["Sebastian Widua <seppel3210@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking", "cookies"]}
